syntax = "proto3";

service KafkaService {
    rpc SyncToSdmUser (ISyncToSdmUserDataReq) returns (ISyncToSdmUserDataRes) {}
    rpc SyncToCmsUser (ISyncToCmsUserDataReq) returns (ISyncToCmsUserDataRes) {}
}

message ISyncToSdmUserDataReq { }

message ISyncToSdmUserDataRes {}

message ISyncToCmsUserDataReq {
    required string aerospikeId = 1;
    required string lastname = 2;
    required string firstname = 3;
    required string email = 4;
    required int32 storeId = 5;
    required int32 websiteId = 6;
    required string password = 7;
}

message ISyncToCmsUserDataRes {}